--- a/style.css
+++ b/style.css
@@ -16,3 +16,36 @@ body {
     padding: 40px 35px;
     border-radius: 15px;
 }
+.search {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.search input{
+    padding: 10px 25px;
+    border: 0;
+    outline: 0;
+    background: #ebfffc;
+    color: #555;
+    height: 60px;
+    border-radius: 30px;
+    flex: 1;
+    margin-right: 16px;
+    font-size: 18px;
+}
+.search button{
+    border: 0;
+    outline: 0;
+    background: #ebfffc;
+    border-radius: 50%;
+    width: 60px;
+    height: 59.5px;
+    cursor: pointer;
+}
+.search button img{
+    width: 16px;
+    height: 17px;
+    margin-top: 5px;
+    margin-left: 2px;
+}
