--- a/style.css
+++ b/style.css
@@ -49,3 +49,42 @@ body {
     margin-top: 5px;
     margin-left: 2px;
 }
+.weather-upperpart{
+    margin-left: 28.5%;
+}
+.weather-icon{
+    width: 170px;
+    margin-top: 30px;
+}
+.weather h1{
+    font-size: 80px;
+    font-weight: 500;
+}
+.weather h2 {
+    font-size: 45px;
+    font-weight: 400;
+    margin-top: -10px;
+}
+.details{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 20px;
+    margin-top: 50px;
+}
+.col{
+    display: flex;
+    align-items: center;
+    text-align: left;
+}
+.col img{
+    width: 40px;
+    margin-right: 10px;
+}
+#wind-spacing{
+    margin-left: 3px;
+}
+.humidity, .wind{
+    font-size: 28px;
+    margin-top: -px;
+}
